Changes in focused XUL button label not announced by screen readers
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox135 | --- | verified |
People
(Reporter: henry-x, Assigned: Jamie)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Steps to reproduce
Example:
- Visit
de.wikipedia.org. - Select some text and choose "Translate Selection".
- Wait for the translation to complete.
- Navigate to the "Copy" button.
- Activate the button, which switches the label to "Copied".
Expected
Screen reader should announce the new button label "Copied" since it is focused.
Actual
No response from screen reader to the change in label.
Tested on linux with Orca with my firefox dev build, and on windows 10 with NVDA with firefox 132.0.2.
Origin
I think this may be a result of the xul:button using the xul:label value attribute, rather than a Text node. I.e. the button has no text content.
When testing with Orca, changing the Fluent from
select-translations-panel-copy-button =
.label = Copy
select-translations-panel-copy-button-copied =
.label = Copied
to
select-translations-panel-copy-button = Copy
select-translations-panel-copy-button-copied = Copied
resolves the issue. I.e. setting the textContent (and replacing the usual xul:button structure) resolves this. But this is not a good solution to the problem since it just discards all the complexities of the xul:button. I guess you could use something similar to the HighlightableButton class used in about:preferences, or switch to <moz-button>, but maybe this can be addressed in the accessibility core.
| Assignee | ||
Updated•11 months ago
|
| Assignee | ||
Comment 1•11 months ago
|
||
This just converts the existing test to use the promise-based waitForEvent instead of eventQueue.
This will make it much easier to add other tests in subsequent patches.
Updated•11 months ago
|
| Assignee | ||
Comment 2•11 months ago
|
||
https://hg.mozilla.org/mozilla-central/rev/f008ccecc299
https://hg.mozilla.org/mozilla-central/rev/51fd32a534ae
Updated•9 months ago
|
Comment 5•9 months ago
|
||
This implementation works on MacOS 11 and Windows 10, but it does not work on Ubuntu 22.
I have logged a follow-up bug for the remaining operating system: bug 1943980.
This being said, I will close this report. Please reopen if necessary. Thank you.
| Assignee | ||
Updated•9 months ago
|
Description
•