Bug 1933156 part 2: Fire a name change event when a XUL button's label attribute changes. r=nlapre

Differential Revision: https://phabricator.services.mozilla.com/D230216